--- a/estilos/style.css
+++ b/estilos/style.css
@@ -34,3 +34,10 @@ section#telefone{
     background-image: url(../imagens/frame-iphone.png);
     background-repeat: no-repeat;
 }
+iframe#tela{
+    position: relative;
+    top: 80px;
+    left: 22px;
+    height: 471px;
+    width:269px;
+}
